--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = featheresp32
 framework = arduino
+monitor_speed = 115200
 
 lib_deps = 
     adafruit/Adafruit GFX Library
